syntax = "proto3";

package job;

option go_package = "jobs/protos";

import "google/api/annotations.proto";

service Job {
    rpc CreateJob (CreateJobRequest) returns (JobReply) {
        option (google.api.http) = {
            post: "/v1/job"
            body: "*"
        };
    }
    rpc UpdateJob (UpdateJobRequest) returns (JobReply) {
        option (google.api.http) = {
            put: "/v1/job/{id}"
            body: "*"
        };
    }
    rpc ReadJob (ReadJobRequest) returns (JobReply) {
        option (google.api.http) = {
            get: "/v1/job/{id}"
        };
    }

    rpc ListJobs (ListJobRequest) returns (ListJobReply) {
        option (google.api.http) = {
            get: "/v1/jobs"
        };
    }
    rpc DeleteJob (DeleteJobRequest) returns (DeleteJobReply){
        option (google.api.http) = {
           delete: "/v1/job/{jobId}"
        };
    }

    rpc Recruit (RecruitJobRequest) returns (RecruitJobReply){
        option (google.api.http) = {
            post: "/v1/recruit/{job_id}"
            body: "*"
        };
    }
}

message RecruitJobRequest {
    string job_id = 1;
}

message RecruitJobReply {
    string message = 1;
}

message DeleteJobRequest {
    string jobId = 1;
}

message DeleteJobReply {
    string status = 1;
}

message CreateJobRequest {
    string title = 1;
    string description = 2;
    repeated string skills = 3;
    string hour_rate = 4;
}

message UpdateJobRequest {
    string id = 1;
    string text = 2;
    string title = 3;
    repeated string skills = 4;
    string hour_rate = 5;

}

message ReadJobRequest {
    string id = 1;
}

message ListJobRequest {
    string page = 1;
    string number = 2;
}

message ListJobReply {
    repeated JobReply jobs = 1;
    string page = 2;
}

message JobReply {
    string id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string skills = 5;
    string hour_rate = 6;
}